{
  "version": 4,
  "terraform_version": "1.2.1",
  "serial": 14,
  "lineage": "0ced8b5e-85bd-bb71-5474-478269a001da",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "apache2_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cbea92f2377277a4",
            "arn": "arn:aws:ec2:us-east-2:162050386673:instance/i-0edb677ffe874f30b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0edb677ffe874f30b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0edc62c842d002ee7",
            "private_dns": "ip-172-31-9-83.us-east-2.compute.internal",
            "private_ip": "172.31.9.83",
            "public_dns": "ec2-3-144-124-121.us-east-2.compute.amazonaws.com",
            "public_ip": "3.144.124.121",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06186b1e2bad0aaf2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "generic_sg_egress",
              "http_sg_ingress",
              "ssh_sg_ingress"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0303a97994e131a4b",
            "tags": {
              "Name": "ec2-us-east-2-dev",
              "env": "dev"
            },
            "tags_all": {
              "Name": "ec2-us-east-2-dev",
              "env": "dev"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-018330886a47c6483",
              "sg-01b94352caf60ce52",
              "sg-05ec0cb9534a5a7d0"
            ]
          },
          "dependencies": [
            "data.aws_ami.ubuntu",
            "module.generic_sg_egress.aws_security_group.security_group",
            "module.generic_sg_egress.aws_security_group_rule.security_group_rule",
            "module.http_sg_ingress.aws_security_group.security_group",
            "module.ssh_sg_ingress.aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "module": "module.generic_sg_egress",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:162050386673:security-group/sg-05ec0cb9534a5a7d0",
            "description": "Allow server to connect to outbound internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-05ec0cb9534a5a7d0",
            "ingress": [],
            "name": "generic_sg_egress",
            "name_prefix": "",
            "owner_id": "162050386673",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev"
            },
            "tags_all": {
              "Environment": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-033383fce58047d82"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.generic_sg_egress",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "security_group_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1178853860",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-05ec0cb9534a5a7d0",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.generic_sg_egress.aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "module": "module.http_sg_ingress",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:162050386673:security-group/sg-018330886a47c6483",
            "description": "Allow port 80 from anywhere",
            "egress": [],
            "id": "sg-018330886a47c6483",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "http_sg_ingress",
            "name_prefix": "",
            "owner_id": "162050386673",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev"
            },
            "tags_all": {
              "Environment": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-033383fce58047d82"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.http_sg_ingress",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "security_group_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-4252078101",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-018330886a47c6483",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.http_sg_ingress.aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "module": "module.ssh_sg_ingress",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:162050386673:security-group/sg-01b94352caf60ce52",
            "description": "Allow Port 22 from anywhere",
            "egress": [],
            "id": "sg-01b94352caf60ce52",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ssh_sg_ingress",
            "name_prefix": "",
            "owner_id": "162050386673",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev"
            },
            "tags_all": {
              "Environment": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-033383fce58047d82"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.ssh_sg_ingress",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "security_group_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-1343661535",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-01b94352caf60ce52",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ssh_sg_ingress.aws_security_group.security_group"
          ]
        }
      ]
    }
  ]
}